<resources>
    <string name="app_name">TRIP CAPTAIN</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!--    News API    -->
    <string name="news_api_country">my</string>
    <string name="news_api_keyword">keyword</string>
    <string name="news_api_key">b1aeb4b3f09342de95e6a96ba7002852</string>
    <string name="loading_news">Loading News ...</string>
    <string name="article_list">Article List</string>
    <string name="no_image_url">https://thumbs.dreamstime.com/b/no-image-available-icon-photo-camera-flat-vector-illustration-132483097.jpg</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_in_ar">View in AR</string>
    <string name="back">Back</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="switch_place_type">Switch Place Type</string>
    <string name="switch_place">Switch Place</string>
    <string name="oops_no_such_nearby_place">Oops, no such nearby place</string>
    <string name="ar">AR</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="saved_places">Saved Places</string>
    <string name="profile_image">Profile Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_time_user">First Time User</string>
    <string name="home">Home</string>
    <string name="safety_warning">SAFETY WARNING</string>
    <string name="safety_warning_description">Avoid using phone while walking or driving on the road!\nPlease be aware of your surrounding.\nThis feature is <b>experimental</b> and <b>not suitable for real-world usage</b>.</string>
    <string name="ok_got_it">OK, got it</string>

</resources>