<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="recommendationsFragment"
            type="com.example.tripcaptainkotlin.view.ui.fragment.RecommendationsFragment" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlace"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            app:layoutManager="LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/llNoResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="20dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_trip_captain"
                android:tint="@color/material_on_surface_disabled"
                android:layout_margin="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/oops_no_such_nearby_place"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="end"
            android:padding="20dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fabSwitchPlaceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_place"
                app:backgroundTint="@color/colorAccent"
                app:iconTint="#FFFFFF"
                android:textColor="#FFFFFF"
                android:contentDescription="@string/switch_place_type"
                android:onClick="@{() ->  recommendationsFragment.switchPlaceType()}"
                app:icon="@drawable/ic_baseline_local_cafe_24" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>