<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="mActivity"
            type="com.example.tripcaptainkotlin.view.ui.activity.ArPlaceActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvWarningTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:fontFamily="@font/arimo"
            android:text="@string/safety_warning"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/ivWarning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivWarning"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_baseline_warning_24"
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/tvWarningDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarningTitle" />

        <TextView
            android:id="@+id/tvWarningDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arimo"
            android:text="@string/safety_warning_description"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btnDismiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivWarning" />

        <Button
            android:id="@+id/btnDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_got_it"
            android:backgroundTint="@color/colorPrimary"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarningDescription"
            android:onClick="@{() -> mActivity.closeDialog()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>